tests/language_modules/10_expressions/valid/ordering_comparison.vf
module OrderingComparison

procedure main()
is
    check 1 < 2 and 3 >= 3
end main

end OrderingComparison