tests/language_modules/10_expressions/invalid_semantics/ordering_comparison_operand_mismatch.vf
module OrderingComparisonOperandMismatch

procedure main()
is
    check "a" < "b"
end main

end OrderingComparisonOperandMismatch